--- a/src/index.css
+++ b/src/index.css
@@ -6,7 +6,7 @@
 
 body {
     margin: 0, 0, 0, 0;
-    background-image: url(../src/res/5ea05a9bca0ed171a261f0b4.jpg);
+    background-image: url(res/5ea05a9bca0ed171a261f0b4.jpg);
     display: flex;
     flex-flow: column;
     min-height: max-content;
@@ -15,7 +15,6 @@ body {
 
 .flex-container-head {
     /*генерирует flex-контейнер уровня строки*/
-    display: -webkit-inline-flex;
     display: inline-flex;
     margin: 0;
     width: 100%;
@@ -90,7 +89,7 @@ body {
     margin: 0;
     font-family: 'Pacifico',
         cursive;
-    font-size: 35pt;
+    font-size: 35px;
     font-weight: 700;
     text-align: center;
     margin-top: 10px;
@@ -100,7 +99,6 @@ body {
     grid-area: actor_body;
     background-color: rgba(255, 0, 0, 0.666);
     border-radius: 30px;
-    display: -webkit-inline-flex;
     display: inline-flex;
     flex-direction: column;
     flex-wrap: wrap;
@@ -113,7 +111,6 @@ body {
     grid-area: music_body;
     background-color: rgba(255, 0, 0, 0.666);
     border-radius: 30px;
-    display: -webkit-inline-flex;
     display: inline-flex;
     flex-direction: column;
     flex-wrap: wrap;
@@ -200,7 +197,7 @@ body {
     align-self: center;
 }
 
-form {
+.form {
     position: absolute;
     transition: all 1s;
     width: 70%;
@@ -215,7 +212,7 @@ form {
     top: 50%;
 }
 
-input {
+.input {
     position: absolute;
     top: 0;
     left: 0;
@@ -224,7 +221,6 @@ input {
     line-height: 30px;
     outline: 0;
     border: 0;
-    display: none;
     font-size: 1em;
     border-radius: 20px;
     padding: 0 20px;
@@ -248,15 +244,15 @@ input {
     transition: all 1s;
 }
 
-form:hover {
+.form:hover {
     cursor: pointer;
 }
 
-form:hover input {
+.form:hover input {
     display: block;
 }
 
-form:hover .fa {
+.form:hover .fa {
     background: #07051a;
     color: #ece1e1;
 }
@@ -281,7 +277,7 @@ form:hover .fa {
     margin: 0;
 }
 
-.rectangle a {
+.rectangle_a {
     margin: 10px;
     position: relative;
     display: block;
@@ -294,13 +290,13 @@ form:hover .fa {
     border-radius: 30px;
 }
 
-.rectangle a:hover {
+.rectangle_a:hover {
     background: #fff6a9;
     border: 3px solid #fff6a9;
     font-weight: 500;
 }
 
-.rectangle a:before {
+.rectangle_a:before {
     content: counter(li);
     counter-increment: li;
     position: absolute;
@@ -316,11 +312,11 @@ form:hover .fa {
     border-radius: 50%;
 }
 
-.rectangle a:hover:before {
+.rectangle_a:hover:before {
     background-color: #fff6a9;
 }
 
-.rectangle a:hover:after {
+.rectangle_a:hover:after {
     left: -.93em;
     border-left-color: #fff6a9;
 }
