--- a/src/index.css
+++ b/src/index.css
@@ -68,6 +68,14 @@ body {
     text-align: left;
 }
 
+.validaton_text {
+    margin: 0;
+    font-family: 'Raleway', sans-serif;
+    font-size: 20px;
+    font-weight: 600;
+    text-align: center;
+}
+
 
 .container {
     display: grid;
